# budgetMe

./: .env.local.example  .gitignore  CLAUDE.md  LICENCE  README.md  auth.ts  next.config.ts  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: azure-static-web-apps-white-ocean-0803cac03.yml  azure-static-web-apps-wonderful-wave-0a6e53503.yml  backend-deploy.yml  deployment.yml  main_budgetme-backend.yml  mypy.yml  ruff.yml
app/: globals.css  layout.tsx  page.tsx
app/api/auth/[...nextauth]/: route.ts
app/api/drive/balance/: route.ts
app/api/drive/entries/: route.ts
app/api/drive/entry/: route.ts
app/api/drive/reorder/: route.ts
app/api/drive/set-entries/: route.ts
app/api/drive/sync-recurring/: route.ts
app/components/: CategoryColumn.tsx  CategoryTabs.tsx  ConstantBanner.tsx  DesktopEntryRow.tsx  EntryForm.tsx  EntryRow.tsx  EntrySheet.tsx  GroupedEntryList.tsx  Header.tsx  HtmlLang.tsx  LanguageContext.tsx  Logo.tsx  Modal.tsx  MonthPicker.tsx  PlannedBanner.tsx  SummaryBar.tsx  SummaryCard.tsx  VerifySheet.tsx  icons.tsx
app/dashboard/[year]/[month]/: DashboardClient.tsx  loading.tsx  page.tsx
app/lib/: i18n.ts
app/sign-in/: page.tsx
backend/: .env.template  README.md  alembic.ini  docker-compose.yml  init_db.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: add_cascade_delete_budget_on_category_2026_03_03-020eaf4f5dd6.py  add_category_table_2026_03_03-7dc18f4d716a.py  add_reoccur_and_cloned_from_id_to_budget_2026_03_04-dcad8f0a8ed6.py  add_reoccur_to_category_2026_03_04-32bbe059a9ea.py  add_user_id_to_category_table_2026_03_03-ba5a17827160.py  initial_setup_2026_02_08-6a107ec6d15e.py  remove_reoccur_from_category_2026_03_04-f1bbec6474cb.py  replace_date_with_year_and_month_in__2026_03_03-389891ccb1f3.py
backend/app/: constants.py  database.py  dependencies.py  exceptions.py  main.py  server.py
backend/app/config/: app.py  app_config.py  auth.py  auth_config.py  database_config.py  server.py  server_config.py
backend/app/domain/auth/: __init__.py  repository.py  router.py  schema.py
backend/app/domain/budget/: __init__.py  repository.py  router.py  schema.py
backend/app/domain/category/: __init__.py  repository.py  router.py  schema.py
backend/app/domain/health/: __init__.py  repository.py  router.py  schema.py
backend/app/models/: __init__.py  base.py  budget.py  category.py
backend/app/routers/auth/: auth.py
docs/: Initial Plan.md
docs/superpowers/plans/: 2026-04-28-budgetme-implementation.md  2026-04-29-i18n-language-toggle.md  2026-04-30-savings-balance.md
docs/superpowers/specs/: 2026-04-29-i18n-language-toggle-design.md  2026-04-30-savings-balance-design.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: auth.ts  budget.ts  category.ts  client.ts
frontend/src/components/layout/: PageShell.tsx
frontend/src/components/ui/: Button.tsx  CategoryActionsModal.tsx  CategoryCombobox.tsx  Input.tsx  Logo.tsx  Modal.tsx  Spinner.tsx  TypeBadge.tsx
frontend/src/hooks/: useTokenVerification.ts
frontend/src/pages/: BudgetPage.tsx  LoginPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: api.ts
lib/: auth.ts  csv.test.ts  csv.ts  google-drive.ts  types.ts
types/: next-auth.d.ts
