[project]
name = "budgetme_backend"
version = "0.1.0"
author = ["Jakub Matuszak"]
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.10.0",
    "uvicorn>=0.40.0",
    "authlib>=1.6.6",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]
