[project]
name = "budgetme-backend"
version = "0.1.0"
description = "Backend server for the budgetMe application, handling authentication and API endpoints."
authors = [{name = "Jakub Matuszak", email = "jaqobgm@gmail.com"}]
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.3",
    "sqlmodel>=0.0.32",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "authlib>=1.6.7",
    "httpx>=0.28.1",
    "cryptography>=46.0.4",
    "python-dotenv>=1.2.1",
    "email-validator>=2.3.0",
    "itsdangerous>=2.2.0",
    "pyodbc>=5.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0"
]

[project.scripts]
server = "app.main:main"
init-db = "init_db:create_database_if_not_exists"

[build-system]
requires = ["uv_build >= 0.9.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.alembic]
script_location = "%(here)s/alembic"
file_template = "%%(slug)s_%%(year)d_%%(month).2d_%%(day).2d-%%(rev)s"
prepend_sys_path = ["."]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
