[project]
name = "budgetme-backend"
version = "0.1.0"
description = "Backend server for the budgetMe application, handling authentication and API endpoints."
authors = [{name = "Jakub Matuszak", email = "jaqobgm@gmail.com"}]
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "sqlmodel>=0.0.33",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "authlib>=1.6.7",
    "httpx>=0.28.1",
    "cryptography>=46.0.5",
    "python-dotenv>=1.2.1",
    "email-validator>=2.3.0",
    "itsdangerous>=2.2.0",
    "pyodbc>=5.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0"
]

[tool.poetry]
name = "budgetme-backend"
version = "0.1.0"
description = "Backend server for the budgetMe application, handling authentication and API endpoints."
authors = ["Jakub Matuszak <jaqobgm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
alembic = ">=1.18.4"
fastapi = ">=0.129.0"
sqlmodel = ">=0.0.33"
pydantic = ">=2.12.5"
pydantic-settings = ">=2.12.0"
uvicorn = ">=0.40.0"
authlib = ">=1.6.7"
httpx = ">=0.28.1"
cryptography = ">=46.0.5"
python-dotenv = ">=1.2.1"
email-validator = ">=2.3.0"
itsdangerous = ">=2.2.0"
pyodbc = ">=5.3.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.1"
mypy = ">=1.19.1"
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"

[tool.poetry.scripts]
server = "app.main:main"
init-db = "init_db:create_database_if_not_exists"

[project.scripts]
server = "app.main:main"
init-db = "init_db:create_database_if_not_exists"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.alembic]
script_location = "%(here)s/alembic"
file_template = "%%(slug)s_%%(year)d_%%(month).2d_%%(day).2d-%%(rev)s"
prepend_sys_path = ["."]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
